--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/ApplicationLogs.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/ApplicationLogs.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!-- Page Title  -->
-        <Label Content="System Log Events" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
+        <Label Content="System Log Events" FontFamily="Calibri" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
 
         <!-- Stack Panel in which system reports will be generated, contain a list view for the reports and buttons to filter each column -->
         <StackPanel Name="Stk_SytemLogReports" Visibility="Visible" Grid.Column="1" Grid.Row="1" >
@@ -34,7 +34,7 @@
                 </Grid.RowDefinitions>                
                 <Label Name="LblSystemLogError" 
                        Content="Unable to populate System Logs" 
-                       FontSize="14" 
+                       FontFamily="Calibri" FontSize="14"  
                        Grid.Row="0" 
                        HorizontalAlignment="Left" 
                        FontWeight="Bold"
@@ -48,7 +48,7 @@
                               Width="800"
                               Margin="10,10"
                               MaxHeight="500">
-                    <ListView Name="LstSystemEvents" Width="800" MaxHeight="500">
+                    <ListView Name="LstSystemEvents" Width="800" MaxHeight="500" FontFamily="Calibri" FontSize="14" >
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Date / Time" Width="150">
@@ -130,9 +130,9 @@
                             <ColumnDefinition Width="150"/>
                             <ColumnDefinition Width="450"/>
                             <ColumnDefinition Width="150"/>
-                        </Grid.ColumnDefinitions>                     
-                        <Label Grid.Column="0" Grid.Row="1" Content="Select Date" Margin="10,10"/>
-                        <DatePicker AllowDrop="True" Name="Dp_DateSelector" Grid.Row="1" Grid.Column="1"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Grid.Column="0" Grid.Row="1" Content="Select Date" FontFamily="Calibri" FontSize="14" Margin="10,10"/>
+                        <DatePicker AllowDrop="True" Name="Dp_DateSelector" Grid.Row="1" Grid.Column="1" FontFamily="Calibri" FontSize="14"/>
                         <Button Name="Btn_DateSelect" Grid.Column="2" Grid.Row="1" Height="26" Width="100" Content="Select Date" Margin="10,10" Visibility="Visible" HorizontalAlignment="Right" Click="Btn_DateSelect_Click"/>
                         <Button Name="Btn_DateResetForm" Grid.Column="0" Grid.Row="2" Height="26" Width="100" Content="Return" Margin="10,10" Visibility="Visible" HorizontalAlignment="Left" Click="Btn_ResetForm_Click"/>
                     </Grid>
@@ -149,7 +149,7 @@
                             <ColumnDefinition Width="450"/>
                             <ColumnDefinition Width="150"/>
                         </Grid.ColumnDefinitions>
-                        <ComboBox Grid.Column="1" Grid.Row="1" Name="Cmb_SearchSelector" SelectedIndex="0" AllowDrop="True" HorizontalAlignment="Left" Height="26" Width="150">
+                        <ComboBox Grid.Column="1" Grid.Row="1" Name="Cmb_SearchSelector" SelectedIndex="0" AllowDrop="True" HorizontalAlignment="Left" Height="26" Width="150" FontFamily="Calibri" FontSize="14">
                             <ComboBoxItem Content="Select Search Option"/>
                             <ComboBoxItem Content="Grouping Filters"/>
                             <ComboBoxItem Content="Search by Username"/>
