--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/ClassAdmin.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!-- Page Title  -->
-        <Label Content="Administration Page" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>       
+        <Label Content="Administration Page" FontFamily="Calibri" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>       
 
         <!-- Class CRUD Options -->
         <!-- Stack Panel containing the Add Class form -->
@@ -46,10 +46,10 @@
                            Grid.Column="0"
                            Grid.ColumnSpan="3"
                            HorizontalAlignment="Center"
-                           FontSize="20"
+                           FontFamily="Calibri" FontSize="20" 
                            Content="Enter Class Details"/>
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
-                    <Label Content="Class Name:" Margin="0,10"/>
+                    <Label FontFamily="Calibri" FontSize="14" Content="Class Name:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
@@ -60,13 +60,13 @@
                     <Button Name="BtnCancel" Height="26" Width="150" Content="Cancel" VerticalAlignment="Center" Margin="10,10" Click="BtnCancel_Click" TabIndex="2"/>
                     <Button Name="BtnReturn" Height="26" Width="150" Content="Return" Visibility="Collapsed" VerticalAlignment="Center" Margin="10,10" Click="BtnReturn_Click"/>
                     <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassAddSuccessLabel"
-                                   FontSize="16"
+                                   FontFamily="Calibri" FontSize="14" 
                                    FontWeight="Bold"
                                    Foreground="BlueViolet"
                                    Content="Class details successfully added"
                                    Visibility="Collapsed"/>
                     <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassErrorLabel"
-                                   FontSize="16"
+                                   FontFamily="Calibri" FontSize="14" 
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Creating New Class"
@@ -96,10 +96,10 @@
                               Width="600"
                               Margin="10,10"
                               MaxHeight="600">
-                    <ListView Name="LstClassSearch" SelectedValuePath="ClassId">
+                    <ListView Name="LstClassSearch" SelectedValuePath="ClassId" FontFamily="Calibri" FontSize="14">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="ClassID" Width="25">
+                                <GridViewColumn Header="ClassID" Width="100">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <TextBlock HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="{Binding ClassId}"/>
@@ -116,7 +116,7 @@
                             </GridView>
                         </ListView.View>
                         <ListView.ContextMenu>
-                            <ContextMenu Name="MnuClassSearchContext" IsEnabled="True">
+                            <ContextMenu Name="MnuClassSearchContext" IsEnabled="True" FontFamily="Calibri" FontSize="14">
                                 <MenuItem Header="Update Class" Name="MnuIUpdateClass" IsEnabled="True" Click="MnuIUpdateClass_Click">
                                     <MenuItem.Icon>
                                         <Image Source="Images/update-arrow.png"  Width="20" Height="20" Stretch="UniformToFill"/>
@@ -155,12 +155,12 @@
                            Grid.Column="0"
                            Grid.ColumnSpan="3"
                            HorizontalAlignment="Center"
-                           FontSize="20"
+                          FontFamily="Calibri" FontSize="20" 
                            Content="Enter Updated Class Details"/>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
-                    <Label Content="Class Name:" Margin="0,10"/>
-                    <Label Content="Class ID:" Margin="0,10"/>
+                    <Label FontFamily="Calibri" FontSize="14" Content="Class Name:" Margin="0,10"/>
+                    <Label FontFamily="Calibri" FontSize="14" Content="Class ID:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
@@ -174,7 +174,7 @@
                 </StackPanel>
 
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassUpdateErrorLabel"
-                                   FontSize="20"
+                                   FontFamily="Calibri" FontSize="20" 
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Updating the Class"
@@ -203,11 +203,11 @@
                            Grid.Column="0"
                            Grid.ColumnSpan="3"
                            HorizontalAlignment="Center"
-                           FontSize="20"
+                           FontFamily="Calibri" FontSize="20" 
                            Content="Please Check Class Details Before Deletion"/>
                 <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
-                    <Label Content="Class Name:" Margin="0,10"/>
-                    <Label Content="Class ID:" Margin="0,10"/>
+                    <Label FontFamily="Calibri" FontSize="14" Content="Class Name:" Margin="0,10"/>
+                    <Label FontFamily="Calibri" FontSize="14" Content="Class ID:" Margin="0,10"/>
                 </StackPanel>
 
                 <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
@@ -221,7 +221,7 @@
                 </StackPanel>
                 
                 <Label Grid.Row="2" Grid.ColumnSpan="2" Name="Lbl_ClassDeleteErrorLabel"
-                                   FontSize="20"
+                                   FontFamily="Calibri" FontSize="20" 
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Error Deleting the Class"
