--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainWindow.xaml
@@ -73,10 +73,11 @@
                            Grid.ColumnSpan="3"
                            HorizontalAlignment="Center"
                            FontSize="20"
+                           FontFamily="Calibri"
                            Content="Please enter your username and password"/>
                         <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
-                            <Label Content="Username" Margin="0,10"/>
-                            <Label Content="Password" Margin="0,10"/>
+                            <Label FontFamily="Calibri" FontSize="12" Content="Username" Margin="0,10"/>
+                            <Label FontFamily="Calibri" FontSize="12" Content="Password" Margin="0,10"/>
                         </StackPanel >
 
                         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical" Margin="10,0,0,20">
@@ -95,14 +96,15 @@
                                     <RowDefinition Height="10*"/>
                                     <RowDefinition Height="10*"/>
                                 </Grid.RowDefinitions>
-                                <Button Name="BtnLogin" KeyDown="BtnLogin_KeyDown"  Content="Login" Height="26" Width="130" TabIndex="2" Grid.Row="0" HorizontalAlignment="Right" Margin="0,10,4.846,9.526" Click="BtnLogin_Click" Grid.Column="1"/>
-                                <Button Name="BtnCancel" Content="Cancel" Height="26" Width="130" TabIndex="3" Grid.Row="0" HorizontalAlignment="Left" Margin="5,10,0,9.526" Click="BtnCancel_Click" Grid.ColumnSpan="2"/>
+                                <Button Name="BtnLogin" KeyDown="BtnLogin_KeyDown"  Content="Login" Height="26" Width="130" TabIndex="2" Grid.Row="0" HorizontalAlignment="Right" Margin="10,10" Click="BtnLogin_Click" Grid.Column="1"/>
+                                <Button Name="BtnCancel" Content="Cancel" Height="26" Width="130" TabIndex="3" Grid.Row="0" HorizontalAlignment="Left" Margin="10,10" Click="BtnCancel_Click" Grid.ColumnSpan="2"/>
                                 <Label Grid.Row="2" Name="Lbl_ErrorLabel"
+                                   FontFamily="Calibri"
                                    FontSize="14"
                                    FontWeight="Bold"
                                    Foreground="Red"
                                    Content="Invalid username or password"
-                                   Visibility="Collapsed" Grid.ColumnSpan="2" Margin="0,0.474,-0.154,0.227"/>
+                                   Visibility="Collapsed" Grid.ColumnSpan="2" Margin="10,10"/>
                             </Grid>
                         </StackPanel>
                     </Grid>
