--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/Reports.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
 
         <!-- Page Title  -->
-        <Label Content="Pupil Absence Reports" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
+        <Label Content="Pupil Absence Reports" FontFamily="Calibri" FontSize="24" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="0" HorizontalAlignment="Center"/>
 
         <!-- Stack Panel containing the list of available report options -->
         <StackPanel Name="Stk_MenuPanel" Visibility="Visible" Grid.Column="1" Grid.Row="1" >
@@ -31,9 +31,9 @@
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="50*"/>
                 </Grid.RowDefinitions>
-                <Label Content="Select the Report Required" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
-               
-                <Menu Name="MenuReportType" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
+                <Label Content="Select the Report Required" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+
+                <Menu Name="MenuReportType" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible" FontFamily="Calibri" FontSize="14">
                     <MenuItem Header="Select Report Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
                         <MenuItem Header="Class Report" Name="MenuItemClass" Click="MenuItemClass_Click"/>
                         <MenuItem Header="Whole School" Name="MenuItemSchool" Click="MenuItemSchool_Click"/>
@@ -50,9 +50,9 @@
                     <RowDefinition Height="70*"/>
                     <RowDefinition Height="20*"/>
                 </Grid.RowDefinitions>
-                <Label Content="Absence Breaches" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
+                <Label Content="Absence Breaches" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
                 <ScrollViewer Grid.Row="1" Margin="10,10" VerticalAlignment="Top" Width="800" ScrollViewer.VerticalScrollBarVisibility="Visible" HorizontalAlignment="Stretch">
-                    <ListView Name="LstVAbsenceBreaches"  >
+                    <ListView Name="LstVAbsenceBreaches" FontFamily="Calibri" FontSize="14">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Pupil Name" Width="400">
@@ -91,8 +91,8 @@
                     <RowDefinition Height="10*"/>
                     <RowDefinition Height="40*"/>
                 </Grid.RowDefinitions>
-                <Label Content="Select Report Option" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
-                <Menu Name="MenuSchoolReportType" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible">
+                <Label Content="Select Report Option" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+                <Menu Name="MenuSchoolReportType" AllowDrop="True" Width="200" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible" FontFamily="Calibri" FontSize="14">
                     <MenuItem Header="Select School Report Type" FontFamily="Calibri" FontSize="14" FontWeight="Bold">
                         <MenuItem Header="Full School by Date" Name="MenuFullSchooDate" Click="MenuFullSchooDate_Click" />
                         <MenuItem Header="Class by Date" Name="MenuClassDate" Click="MenuClassDate_Click" />                        
@@ -110,8 +110,8 @@
                     <RowDefinition Height="10*"/>
                     <RowDefinition Height="20*"/>
                     <RowDefinition Height="20*"/>
-                </Grid.RowDefinitions>                
-                <Label Name="LblCmbLabel" Content="Select Class From the List" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
+                </Grid.RowDefinitions>
+                <Label Name="LblCmbLabel" Content="Select Class From the List" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Left" Visibility="Visible"/>
                 <ComboBox AllowDrop="True"
                           Width="200"                                      
                           Grid.Row="1"
@@ -121,11 +121,12 @@
                           Margin="10,10"
                           Name="CmbBxClassSelector" 
                           ItemsSource="{Binding}"
+                          FontFamily="Calibri" FontSize="14" 
                           DisplayMemberPath="ClassName"
                           SelectedValuePath="ClassId"
                           SelectionChanged="CmbBxClassSelector_SelectionChanged"/>
-                <Label Name="Lbl_Date" Grid.Row="2" Content="Select Date" FontSize="14" Margin="10,10" HorizontalAlignment="Left" Visibility="Hidden"/>
-                <DatePicker AllowDrop="True" Name="Dp_DateSelector" Grid.Row="3" Margin="10,10" Width="200" Visibility="Hidden"/>
+                <Label Name="Lbl_Date" Grid.Row="2" Content="Select Date" FontFamily="Calibri" FontSize="14" Margin="10,10" HorizontalAlignment="Left" Visibility="Hidden"/>
+                <DatePicker AllowDrop="True" Name="Dp_DateSelector" Grid.Row="3" Margin="10,10" Width="200" Visibility="Hidden" FontFamily="Calibri" FontSize="14"/>
                 <Button Name="BtnReportGen"
                         Content="Generate Report"
                         Width="150" Height="26"
@@ -144,9 +145,9 @@
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="50*"/>
                 </Grid.RowDefinitions>
-                <Label Name="LblClassReport" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
+                <Label Name="LblClassReport" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
                 <ScrollViewer HorizontalAlignment="Right" VerticalAlignment="Top" Width="700" MaxHeight="500" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,10">
-                    <ListView Name="LstVClassAbsence">
+                    <ListView Name="LstVClassAbsence" FontFamily="Calibri" FontSize="14">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Pupil Name" Width="300">
@@ -174,7 +175,7 @@
                         </ListView.View>
                     </ListView>
                 </ScrollViewer>
-                <Label Name="LblSelectPupil" FontSize="14" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible" Content="Select a pupil from the list to see a a full report"/>
+                <Label Name="LblSelectPupil" FontFamily="Calibri" FontSize="14" Grid.Row="1" HorizontalAlignment="Left" Visibility="Visible" Content="Select a pupil from the list to see a a full report"/>
                 <Button Name="BtnPupilSelect" Grid.Row="1" HorizontalAlignment="Right" Content="Select Pupil" Width="150" Height="26" Click="BtnPupilSelect_Click"/>                
             </Grid>
         </StackPanel>
@@ -201,7 +202,7 @@
                     <RowDefinition Height="50*"/>
                     <RowDefinition Height="50*"/>
                 </Grid.RowDefinitions>
-                <Label Content="Full School Absence Report" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
+                <Label Content="Full School Absence Report" FontFamily="Calibri" FontSize="14" Grid.Row="0" HorizontalAlignment="Center" Visibility="Visible"/>
                 <ScrollViewer HorizontalAlignment="Right" VerticalAlignment="Top" MinWidth="700" MinHeight="500" MaxHeight="500" ScrollViewer.VerticalScrollBarVisibility="Auto" Margin="10,10">
                     <TextBlock Name="Tblk_SchoolReportBlock" FontSize="14"  Background="AliceBlue" Foreground="Black"/>
                 </ScrollViewer>
